# sgx-runtime

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  upstream.yml
node/: Cargo.toml
pallets/sgx-account-linker/: Cargo.toml
pallets/sgx-account-linker/src/: lib.rs  mock.rs  tests.rs  util_eth.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: evm.rs  lib.rs
substrate-sgx/externalities/: Cargo.toml
substrate-sgx/externalities/src/: bypass.rs  codec_impl.rs  lib.rs  vectorize.rs
substrate-sgx/sp-io/: Cargo.toml  with_sgx.rs  without_sgx.rs
substrate-sgx/sp-io/src/: lib.rs
test-no-std/: Cargo.toml
test-no-std/src/: main.rs
test_no_std/: Cargo.toml  Makefile
test_no_std/src/: main.rs
