[workspace]
members = [
    'node',
    'runtime',
    'substrate-sgx/sp-io',
    'substrate-sgx/externalities'
]
[profile.release]
panic = 'unwind'

[patch.crates-io]
sp-io = { path = "substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
