[workspace]
resolver = "2"

members = [
    'runtime',
    'substrate-sgx/sp-io',
    'substrate-sgx/externalities',
    'test_no_std'
]

[profile.release]
panic = 'unwind'

[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
sp-io = { path = "substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}

[patch."https://github.com/scs/sgx-runtime"]
sgx-runtime = { path = "runtime", default-features = false}
sp-io = { path = "substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
sgx-externalities = { path = "substrate-sgx/externalities", default-features = false}
