[package]
name = "test-no-std"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "backtrace"] }

[dependencies]
libc = { version = "0.2", default-features = false }
sgx-runtime = { path = "../runtime", default-features = false }
sp-io = { path = "../substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", default-features = false, features = ["full_crypto"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", default-features = false, features = ["full_crypto"] }

[features]
evm = ["sgx-runtime/evm"]