[package]
authors = ['Litentry Dev']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://litentry.com'
license = 'Unlicense'
name = 'pallet-sgx-account-linker'
repository = 'https://github.com/litentry/litentry-pallets'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'
features = ['full_crypto']

[dependencies.sp-runtime]
default-features = false
optional = true
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = '4.0.0-dev'

[dependencies]

log = { version = "0.4.14", default-features = false }
sha2 = { default-features = false, version = "0.9.5" }
ripemd160 = {default-features = false, version = "0.9.1" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]

parity-crypto = {version = "0.8.0", features = ["publickey"] }
bitcoin = { version = "0.25.2", features = ["rand"] }
serde = { version = "1.0.119" }
hex = "0.4.2"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sha2/std",
    "ripemd160/std",
    "log/std",
    "scale-info/std",
]
