[package]
authors = ['Anonymous']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
version = '2.0.0-rc5'

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0-rc5'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc5'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
