[package]
name = "sgx-externalities"
version = "0.4.0"
authors = ["Integritee AG <hello@integritee.network> and Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]

# no_std
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "chain-error"]}
derive_more = "0.99.16"
environmental = { version = "1.1.3", default-features = false }
log = { version = "0.4", default-features = false }
postcard = { version = "0.7", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# sgx dependencies
sgx_tstd      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true }
sgx_types     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[features]
default = ["std"]
std = [
    "codec/std",
    "environmental/std",
    "log/std",
    "postcard/use-std",
    "serde/std",
    "serde_json/std",
]
sgx = [
    "sgx_tstd",
]