[package]
name = "sgx-externalities"
version = "0.4.0"
authors = ["Integritee AG <hello@integritee.network> and Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# no_std
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "chain-error"]}
derive_more = "0.99.16"
environmental = { version = "1.1.3", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "0.7.2", default-features = false, features = ["alloc"] }

# sgx dependencies
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[features]
default = ["std"]
std = [
    "codec/std",
    "environmental/std",
    "log/std",
    "postcard/use-std",
    "serde/std",
]
sgx = [
    "sgx_tstd",
]
