[package]
name = "sp-io"
version = "4.0.0-dev"
authors = ["Integritee AG <hello@integritee.network> and Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
log = { version = "0.4", default-features = false }

sgx_tstd      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true}
sgx_types     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
sgx-externalities = { default-features = false, path = "../externalities", optional = true }

# Substrate dependencies
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", features=["full_crypto"], branch = "master" }

[dev-dependencies]
hex-literal = { version = "0.3.4" }

[features]
default = ["std"]

std = [
	"log/std",
	"sp-core/std",
	"codec/std",
	"sgx-externalities/std",
]

sgx = [
	"sgx_tstd",
	"sgx_types",
	"sgx-externalities/sgx",
]