[package]
name = "sp-io"
version = "6.0.0"
authors = ["Integritee AG <hello@integritee.network> and Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = ["static-context"] }
futures = { version = "0.3.1", features = ["thread-pool"], optional = true }
parking_lot = { version = "0.12.0", optional = true }
tracing = { version = "0.1.25", default-features = false }
tracing-core = { version = "0.1.17", default-features = false}
log = { version = "0.4", default-features = false }

environmental = { version = "1.1.3", default-features = false }
sgx_tstd  = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx-externalities = { default-features = false, path = "../externalities", optional = true }

# Substrate dependencies
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", features=["full_crypto"] , branch = "polkadot-v0.9.26" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.26" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-wasm-interface = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-tracing = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.26" }
sp-keystore = {  default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.26" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.26" }

[dev-dependencies]
hex-literal = { version = "0.3.4" }

[features]
default = ["std"]
std = [
	"environmental/std",
	"log/std",
	"sp-core/std",
	"codec/std",
	"sp-std/std",
	"sp-keystore/std",
	"hash-db/std",
	"sp-trie",
	"sp-state-machine",
	"libsecp256k1/std",
	"sp-runtime-interface/std",
	"sp-externalities",
	"sp-wasm-interface/std",
	"futures",
	"parking_lot",
	"sgx-externalities/std",
]
sgx = [
	"sgx_tstd",
	"sgx_types",
	"sgx-externalities/sgx",
	"sp-runtime-interface/disable_target_static_assertions",
]

# These two features are used for `no_std` builds for the environments which already provides
# `#[panic_handler]`, `#[alloc_error_handler]` and `#[global_allocator]`.
#
# For the regular wasm runtime builds those are not used.
disable_panic_handler = []
disable_oom = []
disable_allocator = []
